# AarogyaSetu_Android

./: .gitignore  CODE_OF_CONDUCT.md  Contributors.md  LICENSE.md  README.md  SECURITY.gmd  SECURITY.md  Sudarshan  Suggestions for More Features  build.gradle  coc.md  file.txt  google-services.json.sample  gradle.properties  keystore.properties.sample  settings.gradle  testfileshiva.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: Bug.md  Documentation.md  Enhancement.md  Feature.md
.github/workflows/: android.yml
app/: .gitignore  AarogyaSetu.jks  build.gradle  lint-baseline.xml  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: config.properties
app/src/main/jni/: CMakeLists.txt  native-lib.c
app/src/main/res/anim/: rotate.xml  slide_down.xml  slide_up.xml
app/src/main/res/color/: button_text_selector.xml
app/src/main/res/drawable/: background_splash.xml  bg_blue_round_6dp.xml  button.xml  button_border_red.xml  button_settings_open.xml  button_try_again.xml  button_with_dark_stroke.xml  button_with_light_stroke.xml  circle_shape.xml  ic_bottom_arrow.xml  ic_call.xml  ic_close_round.xml  ic_close_white.xml  ic_grocery_male.xml  ic_info.xml  ic_language_change.xml  ic_menu_black.xml  ic_profile.xml  ic_profile_icon.xml  ic_qr.xml  ic_qr_code.xml  ic_refresh.xml  ic_share.xml  ic_sync_failure.xml  ic_sync_success.xml  ic_syncing.xml  ic_top_arrow.xml  ic_verify_app.xml  ic_warning.xml  onboarding_screen_text_bg.xml  onboarding_screen_text_bg_down_arrow.xml  onboarding_screen_text_bg_up_arrow.xml  rounded_background.xml  white_bg_top_round.xml
app/src/main/res/font/: work_sans.xml  work_sans_semibold.xml
app/src/main/res/layout/: activity_custom_scanner.xml  activity_home.xml  activity_onboarding.xml  activity_permission.xml  activity_qr_code.xml  custom_barcode_scanner.xml  dialog_no_bluetooth.xml  dialog_no_network.xml  dialog_sync_data.xml  dialog_sync_data_consent.xml  dialog_sync_data_state.xml  fragment_first_introduction.xml  fragment_forth_on_board_intro.xml  fragment_login_bottom_sheet.xml  fragment_second_on_board_intro.xml  fragment_select_language.xml  fragment_third_on_board_intro.xml  fragment_why_needed.xml  list_item_language.xml  navigation_layout.xml  otp_validation_layout.xml  phone_number_layout.xml  qr_code_view.xml  scan_validity_view.xml  status_view.xml
app/src/main/res/layout-v23/: activity_permission.xml
app/src/main/res/values-as/: strings.xml
app/src/main/res/values-ba/: strings.xml
app/src/main/res/values-gu/: strings.xml
app/src/main/res/values-hi/: strings.xml
app/src/main/res/values-ka/: strings.xml
app/src/main/res/values-lus/: strings.xml
app/src/main/res/values-ma/: strings.xml
app/src/main/res/values-mai/: strings.xml  styles.xml
app/src/main/res/values-mal/: strings.xml
app/src/main/res/values-od/: strings.xml
distribution/: const_general.c  const_general.h  const_properties.c  const_properties.h  meat_grinder.c  meat_grinder.h
gradle/wrapper/: gradle-wrapper.properties
(+178 files in other folders)
